--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -27,7 +27,7 @@
 }
 
 .hero-container .heading {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 600;
   line-height: 1;
   color: var(--text-color2);
@@ -53,7 +53,7 @@
 }
 
 .heading .school-title {
-  font-size: 5rem;
+  font-size: 4.5rem;
 }
 
 .green {
